--- a/src/components/mainBox/index.css
+++ b/src/components/mainBox/index.css
@@ -4,41 +4,85 @@
     font-size: 0.25rem;
     border-radius: 0.22rem;
     display: inline-block;
-    box-shadow: 0px 0px 20px 1px rgba(220, 220, 220, 0.2) inset;
-    .main{
-        border-radius: 0.12rem;
-        transition: 3s 0s all ease;
-        overflow: hidden;
+    box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.2) inset;
+    
+}
+.main{
+    border-radius: 0.12rem;
+    transition: 0.3s 0s all ease;
+    font-size: 0px;
+    border-radius: 0rem;
+    background-color: rgba(225, 225, 225, 0);
+    .body{
+        border-radius: 0.22rem;
         box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.6);
-        font-size: 0px;
-        background-color: #fff;
-        border-radius: 0rem;
+        display: inline-block;
         .head{
+            border-radius: 0.22rem;
             img{
-                width: 100%;
                 border-radius: 0.22rem;
+                width: 100%;
             }
         }
     }
 }
+// 点击缩放效果
 .active{
     transform: scale(0.9, 0.9)
 }
+// 点击全屏效果
 .full{
     position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
+    background-color: #fff;
     .body{
-        animation: full 3s ease-in 1s 1 normal both paused;
+        position: absolute;
+        animation-name: full;
+        animation-duration: 0.3s;
+        animation-fill-mode: forwards;
+        box-shadow: 0px 0px 0px 0px rgba(220, 220, 220, 0.6);
+        .head{
+            animation-name: full-border-radius;
+            animation-duration: 0.3s;
+            animation-fill-mode: forwards;
+            img{
+                animation-name: full-border-radius;
+                animation-duration: 0.3s;
+                animation-fill-mode: forwards;
+            }
+        }
     }
 }
 @keyframes full{
     0%{
-        width: 10px;
+        border-radius: 0.22rem;
+        width: 88%;
+        left: 6%;
+        right: 6%;
+        box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.6);
+    }
+    90%{
+        width: 104%;
+        left: -2%;
+        right: -2%;
     }
     100%{
-        width: 100px;
+        width: 100%;
+        left: 0;
+        right: 0;
+        box-shadow: 0px 0px 0px 0px rgba(220, 220, 220, 0.6);
+        border-radius: 0rem;
+    }
+}
+@keyframes full-border-radius {
+    
+    0%{
+        border-radius: 0.22rem;
+    }
+    100%{
+        border-radius: 0rem;
     }
 }
