--- a/src/components/mainBox/index.css
+++ b/src/components/mainBox/index.css
@@ -4,22 +4,35 @@
     font-size: 0.25rem;
     border-radius: 0.22rem;
     display: inline-block;
-    box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.2) inset;
+    box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0) inset;
     
 }
 .main{
+    position: relative;
     border-radius: 0.12rem;
     transition: 0.3s 0s all ease;
     font-size: 0px;
     border-radius: 0rem;
     background-color: rgba(225, 225, 225, 0);
+    .close-icon{
+        position: absolute;
+        right: 0.2rem;
+        top: 0.2rem;
+        font-size: 0.2rem;
+        border: 1px solid #999;
+        border-radius: 5rem;
+        width: 0.5rem;
+        height: 0.5rem;
+        line-height: 0.5rem;
+        z-index: 2;
+    }
     .body{
         border-radius: 0.22rem;
         box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.6);
         display: inline-block;
         font-size: 0.12rem;
-        overflow-y: scroll;
         .head{
+            font-size: 0rem;
             border-radius: 0.22rem;
             img{
                 border-radius: 0.22rem;
@@ -39,7 +52,7 @@
 }
 // 点击缩放效果
 .active{
-    transform: scale(0.9, 0.9)
+    transform: scale(0.98, 0.98)
 }
 // 点击全屏效果
 .full{
@@ -49,12 +62,14 @@
     bottom: 0;
     top: 0;
     background-color: #fff;
+    z-index: 1;
     .body{
         position: absolute;
         animation-name: full;
         animation-duration: 0.3s;
         animation-fill-mode: forwards;
         box-shadow: 0px 0px 0px 0px rgba(220, 220, 220, 0.6);
+        overflow-y: scroll;
         .head{
             animation-name: full-border-radius;
             animation-duration: 0.3s;
@@ -64,6 +79,44 @@
                 animation-duration: 0.3s;
                 animation-fill-mode: forwards;
             }
+        }
+        .content{
+            animation-name: fadeIn;
+            animation-duration: 0.3s;
+            animation-fill-mode: forwards;
+        }
+    }
+}
+
+.close{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 1;
+    .body{
+        overflow-y: hidden;
+        background-color: #fff;
+        position: absolute;
+        animation-name: close;
+        animation-duration: 0.3s;
+        animation-fill-mode: forwards;
+        box-shadow: 0px 0px 0px 0px rgba(220, 220, 220, 0.6);
+        .head{
+            animation-name: close-border-radius;
+            animation-duration: 0.3s;
+            animation-fill-mode: forwards;
+            img{
+                animation-name: full-border-radius;
+                animation-duration: 0.3s;
+                animation-fill-mode: forwards;
+            }
+        }
+        .content{
+            animation-name: fadeOut;
+            animation-duration: 0.3s;
+            animation-fill-mode: forwards;
         }
     }
 }
@@ -94,5 +147,50 @@
     }
     100%{
         border-radius: 0rem;
+    }
+}
+@keyframes close {
+    0%{
+        width: 100%;
+        left: 0;
+        right: 0;
+        box-shadow: 0px 0px 0px 0px rgba(220, 220, 220, 0.6);
+        border-radius: 0rem;
+    }
+    90%{
+        width: 84%;
+        left: 8%;
+        right: 8%;
+    }
+    100%{
+        border-radius: 0.22rem;
+        width: 88%;
+        left: 6%;
+        right: 6%;
+        box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.6);
+    }
+}
+@keyframes close-border-radius {
+    0%{
+        border-radius: 0rem;
+    }
+    100%{
+        border-radius: 0.22rem;
+    }
+}
+@keyframes fadeIn {
+    0%{
+        opacity: 0
+    }
+    100%{
+        opacity: 1
+    }
+}
+@keyframes fadeOut {
+    0%{
+        opacity: 1
+    }
+    100%{
+        opacity: 0
     }
 }
