--- a/src/components/mainBox/index.css
+++ b/src/components/mainBox/index.css
@@ -15,6 +15,7 @@
     border-radius: 0rem;
     background-color: rgba(225, 225, 225, 0);
     .close-icon{
+        display: none;
         position: absolute;
         right: 0.2rem;
         top: 0.2rem;
@@ -31,6 +32,8 @@
         box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.6);
         display: inline-block;
         font-size: 0.12rem;
+        padding: 0;
+        margin: 0;
         .head{
             font-size: 0rem;
             border-radius: 0.22rem;
@@ -63,13 +66,16 @@
     top: 0;
     background-color: #fff;
     z-index: 1;
+    .close-icon{
+        display: block;
+    }
     .body{
         position: absolute;
         animation-name: full;
         animation-duration: 0.3s;
         animation-fill-mode: forwards;
         box-shadow: 0px 0px 0px 0px rgba(220, 220, 220, 0.6);
-        overflow-y: scroll;
+        overflow-y: auto;
         .head{
             animation-name: full-border-radius;
             animation-duration: 0.3s;
@@ -95,11 +101,11 @@
     bottom: 0;
     top: 0;
     z-index: 1;
+    overflow: hidden;
     .body{
-        overflow-y: hidden;
         background-color: #fff;
         position: absolute;
-        animation-name: close;
+        animation-name: close-ani;
         animation-duration: 0.3s;
         animation-fill-mode: forwards;
         box-shadow: 0px 0px 0px 0px rgba(220, 220, 220, 0.6);
@@ -149,7 +155,7 @@
         border-radius: 0rem;
     }
 }
-@keyframes close {
+@keyframes close-ani{
     0%{
         width: 100%;
         left: 0;
@@ -193,4 +199,9 @@
     100%{
         opacity: 0
     }
+}
+ 
+:global(body.modal-open) {
+  position: fixed;
+  width: 100%;
 }
