--- a/src/components/mainBox/index.css
+++ b/src/components/mainBox/index.css
@@ -25,21 +25,31 @@
         width: 0.5rem;
         height: 0.5rem;
         line-height: 0.5rem;
-        z-index: 2;
+        z-index: 20;
     }
     .body{
         border-radius: 0.22rem;
         box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0.6);
         display: inline-block;
-        font-size: 0.12rem;
+        font-size: 0.26rem;
         padding: 0;
         margin: 0;
         .head{
+            position: relative;
             font-size: 0rem;
             border-radius: 0.22rem;
             img{
                 border-radius: 0.22rem;
                 width: 100%;
+            }
+            .title1{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                font-size: 0.5rem;
+                font-weight: bold;
+                font-family: '微软雅黑'
             }
         }
         .content{
@@ -65,7 +75,7 @@
     bottom: 0;
     top: 0;
     background-color: #fff;
-    z-index: 1;
+    z-index: 10;
     .close-icon{
         display: block;
     }
@@ -100,7 +110,7 @@
     right: 0;
     bottom: 0;
     top: 0;
-    z-index: 1;
+    z-index: 10;
     overflow: hidden;
     .body{
         background-color: #fff;
