--- a/src/routers/main.css
+++ b/src/routers/main.css
@@ -1,1 +1,18 @@
 .main{background-color: #f8f8f8}
+:global(.example-enter) {
+  opacity: 0.01;
+}
+
+:global(.example-enter.example-enter-active) {
+  opacity: 1;
+  transition: opacity 5000ms ease-in;
+}
+
+:global(.example-leave) {
+  opacity: 1;
+}
+
+:global(.example-leave.example-leave-active) {
+  opacity: 0.01;
+  transition: opacity 3000ms ease-in;
+}
