--- a/src/routers/header.css
+++ b/src/routers/header.css
@@ -1,2 +1,8 @@
-.head{color: #000;text-align: center;height: 0.7rem;line-height: 0.7rem;font-size: 0.13rem;}
+.head{
+    color: #000;
+    text-align: center;
+    height: 0.7rem;
+    line-height: 0.7rem;
+    font-size: 0.13rem;
+}
 .head span{font-size: 0.25rem;}
