--- a/src/routers/user/index.css
+++ b/src/routers/user/index.css
@@ -1,9 +1,15 @@
 .main{
+    z-index: 2;
     text-align: center;
     position: absolute;
-    top: 0;
+    top: -0.7rem;
     left: 0;
     right: 0;
     padding-bottom: 0.8rem;
-    background-color: red;
+    .head{
+        height: 7.6rem;
+        img{
+            width: 100%;
+        }
+    }
 }
