--- a/src/components/mainBox/index.css
+++ b/src/components/mainBox/index.css
@@ -53,9 +53,11 @@
             }
         }
         .content{
+            padding: 0.5rem 0.3rem;
             display: block;
             opacity: 1;
             transition-duration: 0.3s;
+            text-align: left;
             &.hide{
                 display: none;
                 opacity: 0;
