--- a/src/routers/Articles.css
+++ b/src/routers/Articles.css
@@ -1,3 +1,21 @@
 .main{
     text-align: center;
+    h1{
+        font-size: 0.1rem;
+    }
+    h2{
+        font-size: 0.2rem
+    }
+    h3{
+        font-size: 0.3rem
+    }
+    h4{
+        font-size: 0.4rem
+    }
+    h5{
+        font-size: 0.5rem
+    }
+    h6{
+        font-size: 0.6rem
+    }
 }
