--- a/src/components/mainBox/index.css
+++ b/src/components/mainBox/index.css
@@ -5,7 +5,6 @@
     border-radius: 0.22rem;
     display: inline-block;
     box-shadow: 0px 0px 100px 10px rgba(220, 220, 220, 0) inset;
-    
 }
 .main{
     position: relative;
@@ -58,6 +57,8 @@
             opacity: 1;
             transition-duration: 0.3s;
             text-align: left;
+            line-height: 0.55rem;
+            padding-bottom: 1rem;
             &.hide{
                 display: none;
                 opacity: 0;
